--- a/style.css
+++ b/style.css
@@ -367,7 +367,11 @@ footer span{
 
 /*Responsive Design*/
 @media(max-width: 768px){
-
+header .logo h1{
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 36px;  
+    line-height: 52.8px;
+}
       /* nav {
         display: flex;
         flex-direction: column;
@@ -394,13 +398,14 @@ footer span{
  .hero{
         flex-direction: column;
         align-items: center;
+        gap: 10px;
     }
 
 .hero .vid {
   width: 100%;
    display: flex;            
   justify-content: center;
-  align-items: center;  
+  align-items: center;
   /* margin-left: 40px;          */ 
 }
 
@@ -413,6 +418,11 @@ footer span{
 
 .blog-section{
     padding: 0px 50px;
+}
+
+.container{
+    width: 95%;
+    margin: auto;
 }
 
 .blogs{
